Add macos boost paths to downstream-ci.yml

--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -224,6 +224,9 @@ jobs:
               compiler_cc: clang
               compiler_cxx: clang++
               compiler_fc: gfortran
+              env: |
+                BOOST_ROOT=$(brew --prefix boost)
+                BOOST_INCLUDE=$(brew --prefix boost)/include
             - name: clang@macos-13-x86
               labels: [self-hosted, platform-builder-macosx-13.4.1-x86_64]
               os: macos-13-x86
@@ -231,6 +234,9 @@ jobs:
               compiler_cc: clang
               compiler_cxx: clang++
               compiler_fc: gfortran
+              env: |
+                BOOST_ROOT=$(brew --prefix boost)
+                BOOST_INCLUDE=$(brew --prefix boost)/include
         run: python setup_downstream_ci.py
 
   eccodes:
