Fix boost paths in homebrew downstream-ci.yml

--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -225,9 +225,9 @@ jobs:
               compiler_cxx: clang++
               compiler_fc: gfortran
               env: |
-                BOOST_ROOT_DIR=$(brew --prefix boost)
-                BOOST_INCLUDE_DIR=$(brew --prefix boost)/include
-                BOOST_LIB_DIR=$(brew --prefix boost)/lib
+                BOOST_ROOT_DIR=$(brew --prefix)
+                BOOST_INCLUDE_DIR=$(brew --prefix)/include
+                BOOST_LIB_DIR=$(brew --prefix)/lib
             - name: clang@macos-13-x86
               labels: [self-hosted, platform-builder-macosx-13.4.1-x86_64]
               os: macos-13-x86
@@ -236,9 +236,9 @@ jobs:
               compiler_cxx: clang++
               compiler_fc: gfortran
               env: |
-                BOOST_ROOT_DIR=$(brew --prefix boost)
-                BOOST_INCLUDE_DIR=$(brew --prefix boost)/include
-                BOOST_LIB_DIR=$(brew --prefix boost)/lib
+                BOOST_ROOT_DIR=$(brew --prefix)
+                BOOST_INCLUDE_DIR=$(brew --prefix)/include
+                BOOST_LIB_DIR=$(brew --prefix)/lib
         run: python setup_downstream_ci.py
 
   eccodes:
