--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -228,7 +228,7 @@ jobs:
                 BOOST_ROOT_DIR=$(brew --prefix)
                 BOOST_INCLUDE_DIR=$(brew --prefix)/include
                 BOOST_LIB_DIR=$(brew --prefix)/lib
-                OPENSSL_ROOT_DIR=$(brew --prefix openssl)
+                #OPENSSL_ROOT_DIR is taken care of in build-package
             - name: clang@macos-13-x86
               labels: [self-hosted, platform-builder-macosx-13.4.1-x86_64]
               os: macos-13-x86
@@ -240,7 +240,7 @@ jobs:
                 BOOST_ROOT_DIR=$(brew --prefix)
                 BOOST_INCLUDE_DIR=$(brew --prefix)/include
                 BOOST_LIB_DIR=$(brew --prefix)/lib
-                OPENSSL_ROOT_DIR=$(brew --prefix openssl)
+                #OPENSSL_ROOT_DIR is taken care of in build-package
         run: python setup_downstream_ci.py
 
   eccodes:
