Finish testing macos runners in downstream-ci

--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -157,66 +157,66 @@ jobs:
             - "3.10"
           MATRIX: |
             name:
-            # - gnu@debian-11
-            #- gnu-7@centos-7.9
-            #- gnu-8@centos-7.9
-            #- gnu@rocky-8.6
-            #- clang@rocky-8.6
-            #- gnu@ubuntu-22.04
-            #- gnu@fedora-37
+            - gnu@debian-11
+            - gnu-7@centos-7.9
+            - gnu-8@centos-7.9
+            - gnu@rocky-8.6
+            - clang@rocky-8.6
+            - gnu@ubuntu-22.04
+            - gnu@fedora-37
             - clang@macos-13-arm
             - clang@macos-13-x86
             include:
-            #- name: gnu@debian-11
-            #  labels: [self-hosted, platform-builder-debian-11]
-            #  os: debian-11
-            #  compiler: gnu
-            #  compiler_cc: gcc
-            #  compiler_cxx: g++
-            #  compiler_fc: gfortran
-            #- name: gnu-7@centos-7.9
-            #  labels: [self-hosted, platform-builder-centos-7.9]
-            #  os: centos-7.9
-            #  compiler: gnu-7
-            #  compiler_cc: gcc-7
-            #  compiler_cxx: g++-7
-            #  compiler_fc: gfortran-7
-            #- name: gnu-8@centos-7.9
-            #  labels: [self-hosted, platform-builder-centos-7.9]
-            #  os: centos-7.9
-            #  compiler: gnu-8
-            #  compiler_cc: gcc-8
-            #  compiler_cxx: g++-8
-            #  compiler_fc: gfortran-8
-            #- name: gnu@rocky-8.6
-            #  labels: [self-hosted, platform-builder-rocky-8.6]
-            #  os: rocky-8.6
-            #  compiler: gnu
-            #  compiler_cc: gcc
-            #  compiler_cxx: g++
-            #  compiler_fc: gfortran
-            #- name: clang@rocky-8.6
-            #  labels: [self-hosted, platform-builder-rocky-8.6]
-            #  os: rocky-8.6
-            #  compiler: clang
-            #  compiler_cc: clang
-            #  compiler_cxx: clang++
-            #  compiler_fc: gfortran
-            #  toolchain_file: /opt/actions-runner/files/toolchain-clang-rocky-8.6.cmake
-            #- name: gnu@ubuntu-22.04
-            #  labels: [self-hosted, platform-builder-ubuntu-22.04]
-            #  os: ubuntu-22.04
-            #  compiler: gnu
-            #  compiler_cc: gcc
-            #  compiler_cxx: g++
-            #  compiler_fc: gfortran
-            #- name: gnu@fedora-37
-            #  labels: [self-hosted, platform-builder-fedora-37]
-            #  os: fedora-37
-            #  compiler: gnu
-            #  compiler_cc: gcc
-            #  compiler_cxx: g++
-            #  compiler_fc: gfortran
+            - name: gnu@debian-11
+              labels: [self-hosted, platform-builder-debian-11]
+              os: debian-11
+              compiler: gnu
+              compiler_cc: gcc
+              compiler_cxx: g++
+              compiler_fc: gfortran
+            - name: gnu-7@centos-7.9
+              labels: [self-hosted, platform-builder-centos-7.9]
+              os: centos-7.9
+              compiler: gnu-7
+              compiler_cc: gcc-7
+              compiler_cxx: g++-7
+              compiler_fc: gfortran-7
+            - name: gnu-8@centos-7.9
+              labels: [self-hosted, platform-builder-centos-7.9]
+              os: centos-7.9
+              compiler: gnu-8
+              compiler_cc: gcc-8
+              compiler_cxx: g++-8
+              compiler_fc: gfortran-8
+            - name: gnu@rocky-8.6
+              labels: [self-hosted, platform-builder-rocky-8.6]
+              os: rocky-8.6
+              compiler: gnu
+              compiler_cc: gcc
+              compiler_cxx: g++
+              compiler_fc: gfortran
+            - name: clang@rocky-8.6
+              labels: [self-hosted, platform-builder-rocky-8.6]
+              os: rocky-8.6
+              compiler: clang
+              compiler_cc: clang
+              compiler_cxx: clang++
+              compiler_fc: gfortran
+              toolchain_file: /opt/actions-runner/files/toolchain-clang-rocky-8.6.cmake
+            - name: gnu@ubuntu-22.04
+              labels: [self-hosted, platform-builder-ubuntu-22.04]
+              os: ubuntu-22.04
+              compiler: gnu
+              compiler_cc: gcc
+              compiler_cxx: g++
+              compiler_fc: gfortran
+            - name: gnu@fedora-37
+              labels: [self-hosted, platform-builder-fedora-37]
+              os: fedora-37
+              compiler: gnu
+              compiler_cc: gcc
+              compiler_cxx: g++
+              compiler_fc: gfortran
             - name: clang@macos-13-arm
               labels: [self-hosted, platform-builder-macosx-13.4.1-arm64]
               os: macos-13-arm
@@ -285,7 +285,7 @@ jobs:
           build_dependencies: |
             ${{ inputs.eccodes }}
 
-      - uses: ecmwf-actions/reusable-workflows/ci-python@main
+      - uses: ecmwf-actions/reusable-workflows/ci-python@v2
         with:
           lib_path: ${{ steps.build-deps.outputs.lib_path }}
 
@@ -312,7 +312,7 @@ jobs:
           build_dependencies: |
             ${{ inputs.eccodes }}
 
-      - uses: ecmwf-actions/reusable-workflows/ci-python@main
+      - uses: ecmwf-actions/reusable-workflows/ci-python@v2
         with:
           lib_path: ${{ steps.build-deps.outputs.lib_path }}
           python_dependencies: ${{ inputs.eccodes-python || 'ecmwf/eccodes-python@develop' }}
@@ -340,7 +340,7 @@ jobs:
           build_dependencies: |
             ${{ inputs.eccodes }}
 
-      - uses: ecmwf-actions/reusable-workflows/ci-python@main
+      - uses: ecmwf-actions/reusable-workflows/ci-python@v2
         with:
           lib_path: ${{ steps.build-deps.outputs.lib_path }}
           python_dependencies: ${{ inputs.eccodes-python || 'ecmwf/eccodes-python@develop' }}
@@ -612,7 +612,7 @@ jobs:
     env:
       DEP_TREE: ${{ needs.setup.outputs.dep_tree }}
     steps:
-      - uses: ecmwf-actions/reusable-workflows/build-package-with-config@main
+      - uses: ecmwf-actions/reusable-workflows/build-package-with-config@v2
         with:
           repository: ${{ matrix.owner_repo_ref }}
           codecov_upload: ${{ needs.setup.outputs.trigger_repo == github.job && inputs.codecov_upload }}
