--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -174,6 +174,10 @@ jobs:
               compiler_cc: gcc
               compiler_cxx: g++
               compiler_fc: gfortran
+              env: |
+                BOOST_ROOT_DIR=/usr
+                BOOST_INCLUDE_DIR=/usr/include/boost169
+                BOOST_LIB_DIR=/usr/lib64/boost169
             - name: gnu-7@centos-7.9
               labels: [self-hosted, platform-builder-centos-7.9]
               os: centos-7.9
