--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -174,7 +174,7 @@ jobs:
               compiler_cc: gcc
               compiler_cxx: g++
               compiler_fc: gfortran
-              env: |
+              env: &linux_env |
                 BOOST_ROOT_DIR=/usr
                 BOOST_INCLUDE_DIR=/usr/include/boost169
                 BOOST_LIB_DIR=/usr/lib64/boost169
@@ -185,6 +185,7 @@ jobs:
               compiler_cc: gcc-7
               compiler_cxx: g++-7
               compiler_fc: gfortran-7
+              env: *linux_env
             - name: gnu-8@centos-7.9
               labels: [self-hosted, platform-builder-centos-7.9]
               os: centos-7.9
