--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -193,6 +193,7 @@ jobs:
               compiler_cc: gcc-8
               compiler_cxx: g++-8
               compiler_fc: gfortran-8
+              env: *linux_env
             - name: gnu@rocky-8.6
               labels: [self-hosted, platform-builder-rocky-8.6]
               os: rocky-8.6
@@ -200,6 +201,7 @@ jobs:
               compiler_cc: gcc
               compiler_cxx: g++
               compiler_fc: gfortran
+              env: *linux_env
             - name: clang@rocky-8.6
               labels: [self-hosted, platform-builder-rocky-8.6]
               os: rocky-8.6
@@ -207,6 +209,7 @@ jobs:
               compiler_cc: clang
               compiler_cxx: clang++
               compiler_fc: gfortran
+              env: *linux_env
               toolchain_file: /opt/actions-runner/files/toolchain-clang-rocky-8.6.cmake
             - name: gnu@ubuntu-22.04
               labels: [self-hosted, platform-builder-ubuntu-22.04]
@@ -215,6 +218,7 @@ jobs:
               compiler_cc: gcc
               compiler_cxx: g++
               compiler_fc: gfortran
+              env: *linux_env
             - name: gnu@fedora-37
               labels: [self-hosted, platform-builder-fedora-37]
               os: fedora-37
@@ -222,6 +226,7 @@ jobs:
               compiler_cc: gcc
               compiler_cxx: g++
               compiler_fc: gfortran
+              env: *linux_env
             - name: clang@macos-13-arm
               labels: [self-hosted, platform-builder-macosx-13.4.1-arm64]
               os: macos-13-arm
@@ -230,7 +235,7 @@ jobs:
               compiler_cxx: clang++
               compiler_fc: gfortran
               #OPENSSL_ROOT_DIR is taken care of in build-package
-              env: |
+              env: &macos_env |
                 BOOST_ROOT_DIR=$(brew --prefix)
                 BOOST_INCLUDE_DIR=$(brew --prefix)/include
                 BOOST_LIB_DIR=$(brew --prefix)/lib
@@ -242,10 +247,7 @@ jobs:
               compiler_cxx: clang++
               compiler_fc: gfortran
               #OPENSSL_ROOT_DIR is taken care of in build-package
-              env: |
-                BOOST_ROOT_DIR=$(brew --prefix)
-                BOOST_INCLUDE_DIR=$(brew --prefix)/include
-                BOOST_LIB_DIR=$(brew --prefix)/lib
+              env: *macos_env
         run: python setup_downstream_ci.py
 
   eccodes:
