--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -59,6 +59,9 @@ on:
       pdbufr:
         required: false
         type: string
+      earthkit-data:
+        required: false
+        type: string
 
 jobs:
   setup:
@@ -82,6 +85,7 @@ jobs:
       trigger_repo: ${{ steps.setup.outputs.trigger_repo}}
       dep_tree: ${{ steps.setup.outputs.build_package_dep_tree }}
       ecflow: ${{ steps.setup.outputs.ecflow }}
+      earthkit-data: ${{ steps.setup.outputs.earthkit-data }}
     steps:
       - name: checkout reusable wfs repo
         uses: actions/checkout@v3
@@ -153,6 +157,10 @@ jobs:
               master_branch: master
               develop_branch: master
               input: ${{ inputs.pdbufr }}
+            ecmwf/earthkit-data:
+              path: .github/ci-config.yml
+              python: true
+              input: ${{ inputs.earthkit-data }}
           PYTHON_VERSIONS: |
             - "3.10"
           MATRIX: |
@@ -626,3 +634,35 @@ jobs:
           build_package_inputs: |
             repository: ${{ matrix.owner_repo_ref }}
           build_config: ${{ matrix.config_path }}
+
+  earthkit-data:
+    name: earthkit-data
+    needs: [setup, cfgrib, pdbufr, pyodc]
+    if: ${{ (always() && !cancelled()) && contains(join(needs.*.result, ','), 'success') && needs.setup.outputs.earthkit-data && (inputs.cfgrib|| inputs.pdbufr || inputs.pyodc) }}
+    strategy:
+      fail-fast: false
+      matrix: ${{ fromJson(needs.setup.outputs.earthkit-data) }}
+    runs-on: ${{ matrix.labels }}
+    env:
+      DEP_TREE: ${{ needs.setup.outputs.dep_tree }}
+    steps:
+      - name: Build dependencies
+        id: build-deps
+        uses: ecmwf-actions/reusable-workflows/build-package-with-config@v2
+        with:
+          repository: ${{ matrix.owner_repo_ref }}
+          codecov_upload: ${{ needs.setup.outputs.trigger_repo == github.job && inputs.codecov_upload }}
+          build_package_inputs: |
+            repository: ${{ matrix.owner_repo_ref }}
+          build_config: ${{ matrix.config_path }}
+          build_dependencies: |
+            ${{ inputs.eccodes }}
+
+      - uses: ecmwf-actions/reusable-workflows/ci-python@v2
+        with:
+          lib_path: ${{ steps.build-deps.outputs.lib_path }}
+          python_dependencies: |
+            ${{ inputs.cfgrib || 'ecmwf/cfgrib@develop' }}
+            ${{ inputs.pdbufr || 'ecmwf/pdbufr@develop' }}
+            ${{ inputs.pyodc || 'ecmwf/pyodc@develop' }}
+          requirements_path: tests/downstream-ci-requirements.txt
