--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -662,7 +662,7 @@ jobs:
         with:
           lib_path: ${{ steps.build-deps.outputs.lib_path }}
           python_dependencies: |
-            ${{ inputs.cfgrib || 'ecmwf/cfgrib@develop' }}
-            ${{ inputs.pdbufr || 'ecmwf/pdbufr@develop' }}
+            ${{ inputs.cfgrib || 'ecmwf/cfgrib@master' }}
+            ${{ inputs.pdbufr || 'ecmwf/pdbufr@master' }}
             ${{ inputs.pyodc || 'ecmwf/pyodc@develop' }}
           requirements_path: tests/downstream-ci-requirements.txt
