Skip macos jobs
Multiple packages fail to build on macos. Temporarily skip until it's
fixed.

--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -166,8 +166,8 @@ jobs:
             - clang@rocky-8.6
             - gnu@ubuntu-22.04
             - gnu@fedora-37
-            - clang@macos-13-arm
-            - clang@macos-13-x86
+            # - clang@macos-13-arm
+            # - clang@macos-13-x86
             include:
             - name: gnu@debian-11
               labels: [self-hosted, platform-builder-debian-11]
@@ -229,27 +229,27 @@ jobs:
               compiler_cxx: g++
               compiler_fc: gfortran
               env: *linux_env
-            - name: clang@macos-13-arm
-              labels: [self-hosted, platform-builder-macosx-13.4.1-arm64]
-              os: macos-13-arm
-              compiler: clang
-              compiler_cc: clang
-              compiler_cxx: clang++
-              compiler_fc: gfortran
-              #OPENSSL_ROOT_DIR is taken care of in build-package
-              env: &macos_env |
-                BOOST_ROOT_DIR=$(brew --prefix)
-                BOOST_INCLUDE_DIR=$(brew --prefix)/include
-                BOOST_LIB_DIR=$(brew --prefix)/lib
-            - name: clang@macos-13-x86
-              labels: [self-hosted, platform-builder-macosx-13.4.1-x86_64]
-              os: macos-13-x86
-              compiler: clang
-              compiler_cc: clang
-              compiler_cxx: clang++
-              compiler_fc: gfortran
-              #OPENSSL_ROOT_DIR is taken care of in build-package
-              env: *macos_env
+            # - name: clang@macos-13-arm
+            #   labels: [self-hosted, platform-builder-macosx-13.4.1-arm64]
+            #   os: macos-13-arm
+            #   compiler: clang
+            #   compiler_cc: clang
+            #   compiler_cxx: clang++
+            #   compiler_fc: gfortran
+            #   #OPENSSL_ROOT_DIR is taken care of in build-package
+            #   env: &macos_env |
+            #     BOOST_ROOT_DIR=$(brew --prefix)
+            #     BOOST_INCLUDE_DIR=$(brew --prefix)/include
+            #     BOOST_LIB_DIR=$(brew --prefix)/lib
+            # - name: clang@macos-13-x86
+            #   labels: [self-hosted, platform-builder-macosx-13.4.1-x86_64]
+            #   os: macos-13-x86
+            #   compiler: clang
+            #   compiler_cc: clang
+            #   compiler_cxx: clang++
+            #   compiler_fc: gfortran
+            #   #OPENSSL_ROOT_DIR is taken care of in build-package
+            #   env: *macos_env
         run: python setup_downstream_ci.py
 
   eccodes:
