--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -11,6 +11,10 @@ on:
         description: Whether to upload code coverage
         type: boolean
         required: false
+      python_qa:
+        description: Whether to run code QA tasks.
+        type: boolean
+        required: false
       eccodes:
         required: false
         type: string
@@ -251,6 +255,37 @@ jobs:
             #   #OPENSSL_ROOT_DIR is taken care of in build-package
             #   env: *macos_env
         run: python setup_downstream_ci.py
+
+  python-qa:
+    name: python-qa
+    needs: [setup]
+    if: ${{ inputs.python_qa }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+          repository: ${{ inputs.repository }}
+          ref: ${{ inputs.ref }}
+
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.x"
+
+      - name: Install Python Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install black flake8 isort
+
+      - name: Check isort
+        run: isort --check .
+
+      - name: Check black
+        run: black --check .
+
+      - name: Check flake8
+        run: flake8 .
 
   eccodes:
     name: eccodes
