--- a/.github/workflows/downstream-ci-hpc.yml
+++ b/.github/workflows/downstream-ci-hpc.yml
@@ -56,6 +56,9 @@ on:
       ecflow:
         required: false
         type: string
+      thermofeel:
+        required: false
+        type: string
       pdbufr:
         required: false
         type: string
@@ -81,6 +84,7 @@ jobs:
       pdbufr: ${{ steps.setup.outputs.pdbufr }}
       dep_tree: ${{ steps.setup.outputs.build_package_hpc_dep_tree }}
       ecflow: ${{ steps.setup.outputs.ecflow }}
+      thermofeel: ${{ steps.setup.outputs.thermofeel }}
     steps:
       - name: checkout reusable wfs repo
         uses: actions/checkout@v4
@@ -142,6 +146,10 @@ jobs:
               path: .github/ci-hpc-config.yml
               python: true
               input: ${{ inputs.skinnywms }}
+            ecmwf/thermofeel:
+                path: .github/ci-hpc-config.yml
+                python: true
+                input: ${{ inputs.thermofeel }}
             ecmwf/ecflow:
               path: .github/ci-hpc-config.yml
               input: ${{ inputs.ecflow }}
@@ -557,3 +565,24 @@ jobs:
           troika_user: ${{ inputs.dev_runner && secrets.HPC_DEV_CI_SSH_USER || secrets.HPC_CI_SSH_USER }}
           repository: ${{ matrix.owner_repo_ref }}
           build_config: ${{ matrix.config_path }}
+
+  thermofeel:
+    name: thermofeel
+    needs: [setup]
+    if: ${{ (always() && !cancelled()) && contains(join(needs.*.result, ','), 'success') && needs.setup.outputs.thermofeel && inputs.thermofeel }}
+    strategy:
+      fail-fast: false
+      matrix: ${{ fromJson(needs.setup.outputs.thermofeel) }}
+    runs-on:
+      [self-hosted, linux, "${{ inputs.dev_runner && 'hpc-dev' || 'hpc' }}"]
+    env:
+      DEP_TREE: ${{ needs.setup.outputs.dep_tree }}
+    steps:
+      - uses: ecmwf-actions/reusable-workflows/ci-hpc@v2
+        with:
+          github_user: ${{ secrets.BUILD_PACKAGE_HPC_GITHUB_USER }}
+          github_token: ${{ secrets.GH_REPO_READ_TOKEN }}
+          troika_user: ${{ inputs.dev_runner && secrets.HPC_DEV_CI_SSH_USER || secrets.HPC_CI_SSH_USER }}
+          repository: ${{ matrix.owner_repo_ref }}
+          build_config: ${{ matrix.config_path }}
+
