--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -727,3 +727,9 @@ jobs:
             ${{ inputs.pdbufr || 'ecmwf/pdbufr@master' }}
             ${{ inputs.pyodc || 'ecmwf/pyodc@develop' }}
           requirements_path: tests/downstream-ci-requirements.txt
+          test_cmd: |
+            python -m pytest -vv -m 'not notebook and not no_cache_init' --cov=. --cov-report=xml
+	          python -m pytest -v -m "notebook"
+	          python -m pytest --forked -vv -m 'no_cache_init'
+            python -m coverage report
+
