--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -729,7 +729,7 @@ jobs:
           requirements_path: tests/downstream-ci-requirements.txt
           test_cmd: |
             python -m pytest -vv -m 'not notebook and not no_cache_init' --cov=. --cov-report=xml
-	          python -m pytest -v -m "notebook"
-	          python -m pytest --forked -vv -m 'no_cache_init'
+            python -m pytest -v -m 'notebook'
+            python -m pytest --forked -vv -m 'no_cache_init'
             python -m coverage report
 
