--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -173,6 +173,7 @@ jobs:
             ecmwf/earthkit-data:
               path: .github/ci-config.yml
               python: true
+              master_branch: main
               input: ${{ inputs.earthkit-data }}
           SKIP_MATRIX_JOBS: |
             ${{ inputs.skip_matrix_jobs }}
