earthkit-data now uses main branch in downstream-ci-hpc.yml

--- a/.github/workflows/downstream-ci-hpc.yml
+++ b/.github/workflows/downstream-ci-hpc.yml
@@ -168,6 +168,7 @@ jobs:
             ecmwf/earthkit-data:
               path: .github/ci-hpc-config.yml
               python: true
+              master_branch: main
               input: ${{ inputs.earthkit-data }}
           SKIP_MATRIX_JOBS: |
             gnu-10.3.0
