--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -31,6 +31,9 @@ on:
       ecflow:
         required: false
         type: string
+      ecflow-light:
+        required: false
+        type: string
       eckit:
         required: false
         type: string
@@ -83,6 +86,7 @@ jobs:
       eccodes: ${{ steps.setup.outputs.eccodes }}
       eccodes-python: ${{ steps.setup.outputs.eccodes-python }}
       ecflow: ${{ steps.setup.outputs.ecflow }}
+      ecflow-light: ${{ steps.setup.outputs.ecflow-light }}
       eckit: ${{ steps.setup.outputs.eckit }}
       fckit: ${{ steps.setup.outputs.fckit }}
       fdb: ${{ steps.setup.outputs.fdb }}
@@ -128,6 +132,9 @@ jobs:
             ecmwf/ecflow:
               path: .github/ci-config.yml
               input: ${{ inputs.ecflow }}
+            ecmwf/ecflow-light:
+              path: .github/ci-config.yml
+              input: ${{ inputs.ecflow-light }}
             ecmwf/eckit:
               path: .github/ci-config.yml
               input: ${{ inputs.eckit }}
@@ -411,6 +418,25 @@ jobs:
     strategy:
       fail-fast: false
       matrix: ${{ fromJson(needs.setup.outputs.ecflow) }}
+    runs-on: ${{ matrix.labels }}
+    env:
+      DEP_TREE: ${{ needs.setup.outputs.dep_tree }}
+    steps:
+      - uses: ecmwf-actions/reusable-workflows/build-package-with-config@v2
+        with:
+          repository: ${{ matrix.owner_repo_ref }}
+          codecov_upload: ${{ needs.setup.outputs.trigger_repo == github.job && inputs.codecov_upload }}
+          build_package_inputs: |
+            repository: ${{ matrix.owner_repo_ref }}
+          build_config: ${{ matrix.config_path }}
+
+  ecflow-light:
+    name: ecflow-light
+    needs: [setup]
+    if: ${{ inputs.ecflow-light && needs.setup.outputs.ecflow-light }}
+    strategy:
+      fail-fast: false
+      matrix: ${{ fromJson(needs.setup.outputs.ecflow-light) }}
     runs-on: ${{ matrix.labels }}
     env:
       DEP_TREE: ${{ needs.setup.outputs.dep_tree }}
