--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -26,6 +26,10 @@ ecflow:
   deps:
     - ecbuild
 
+ecflow-light:
+  deps:
+    - eckit
+
 eckit:
   deps:
     - ecbuild
@@ -110,6 +114,10 @@ eccodes-python:
 ecflow:
   deps:
     - ecbuild
+
+ecflow-light:
+  deps:
+    - eckit
 
 eckit:
   deps:
