--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -553,7 +553,9 @@ jobs:
     steps:
       - uses: ecmwf-actions/reusable-workflows/ci-python@v2
         with:
-          lib_path: ${{ steps.build-deps.outputs.lib_path }}
+          repository: ${{ matrix.owner_repo_ref }}
+          checkout: true
+  
 
   odc:
     name: odc
