--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -148,8 +148,8 @@ jobs:
               path: .github/ci-config.yml
               input: ${{ inputs.mir }}
             ecmwf/multiurl:
-              master_branch: add-to-downstream-ci
-              develop_branch: add-to-downstream-ci
+              master_branch: main
+              develop_branch: main
               python: true
               input: ${{ inputs.multiurl }}
             ecmwf/odc:
@@ -753,7 +753,7 @@ jobs:
           lib_path: ${{ steps.build-deps.outputs.lib_path }}
           python_dependencies: |
             ${{ inputs.cfgrib || 'ecmwf/cfgrib@master' }}
-            ${{ inputs.multiurl || 'ecmwf/multiurl@add-to-downstream-ci' }}
+            ${{ inputs.multiurl || 'ecmwf/multiurl@main' }}
             ${{ inputs.pdbufr || 'ecmwf/pdbufr@master' }}
             ${{ inputs.pyodc || 'ecmwf/pyodc@develop' }}
           requirements_path: tests/downstream-ci-requirements.txt
