--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -24,6 +24,12 @@ earthkit-data:
     - multiurl
     - pdbufr
     - pyodc
+  downstream-ci:
+    test_cmd: |
+      python -m pytest -vv -m 'not notebook and not no_cache_init' --cov=. --cov-report=xml
+      python -m pytest -v -m 'notebook'
+      python -m pytest --forked -vv -m 'no_cache_init'
+      python -m coverage report
 
 ecbuild:
   type: cmake
