--- a/.github/workflows/generate-workflows.yml
+++ b/.github/workflows/generate-workflows.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.head_ref || github.ref  }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.REBUILD_PUSH_TOKEN }}
 
       - name: Git config
         run: |
