--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -99,6 +99,8 @@ multiurl:
   type: python
   master_branch: main
   develop_branch: main
+  downstream-ci:
+    config_path: ""
 
 odc:
   type: cmake
@@ -138,6 +140,10 @@ pyodc:
 
 skinnywms:
   type: python
+  downstream-ci:
+    config_path: ""
 
 thermofeel:
   type: python
+  downstream-ci:
+    config_path: ""
