--- a/dependency_tree.yml
+++ b/dependency_tree.yml
@@ -136,6 +136,8 @@ pyfdb:
     env:
       FDB5_CONFIG: >
         {"type":"local","engine":"toc","schema":"${{ github.workspace }}/tests/default_fdb_schema","spaces":[{"handler":"Default","roots":[{"path":"${{ github.workspace }}/data/fdb"}]}]}
+    mkdir:
+      - data/fdb
 pyodc:
   type: python
   deps:
